# Estructuras

./: Arbol.h  CMakeLists.txt  Dado.h  EstadoJuego.cpp  EstadoJuego.h  MiPrograma  Nodo.cpp  README.md  continente.cpp  continente.h  estado_juego.cpp  estado_juego.h  jugador.cpp  jugador.h  main.cpp  proyecto  tarjeta.cpp  tarjeta.h  territorio.cpp  territorio.h
Codificacion/: Arbol.cpp  Arbol.h  Nodo.cpp  Nodo.h
Estructura/: jugador.cpp  jugador.h  tarjeta.cpp  tarjeta.h  territorio.cpp  territorio.h
Juego/: Dado.cpp  EstadoJuego.cpp  EstadoJuego.h  Jugadas.txt  Tablero.txt  main.cpp
